DuPont DevSB/src/objects/Solution_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAM_Margin__c</fullName>
        <label>BAM Margin</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BA_Configuration__c</fullName>
        <label>BA Configuration</label>
        <referenceTo>BA_Configuration__c</referenceTo>
        <relationshipName>Solution_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_Comment__c</fullName>
        <label>Cost Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Of_Outer_Carrier__c</fullName>
        <label>Cost Of Outer Carrier</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Of_SAP_Pouches__c</fullName>
        <label>Cost Of SAP Pouches</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HAP_Material_Wastage__c</fullName>
        <label>HAP Material Wastage</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material_Wastage_Comment__c</fullName>
        <label>Material Wastage Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Wastage__c</fullName>
        <label>SAP Material Wastage</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Select_HAP_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select HAP Solution</label>
        <referenceTo>Body_Armor_Solution__c</referenceTo>
        <relationshipLabel>BA Solutions Pricing (Select HAP Solution)</relationshipLabel>
        <relationshipName>Solution_Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_SAP_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Select SAP Solution</label>
        <referenceTo>Body_Armor_Solution__c</referenceTo>
        <relationshipLabel>BA Solutions Pricing (Select SAP Solution)</relationshipLabel>
        <relationshipName>Solution_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_package_id_iOS__c</fullName>
        <externalId>true</externalId>
        <label>Solution package id iOS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_cost_of_Body_Armour_for_size_L__c</fullName>
        <label>Total cost of  Body Armour for size L</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_cost_of_Body_Armour_for_size_M__c</fullName>
        <label>Total cost of  Body Armour for size M</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_cost_of_Body_Armour_for_size_S__c</fullName>
        <label>Total cost of  Body Armour for size S</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_cost_of_Body_Armour_for_size_XL__c</fullName>
        <label>Total cost of  Body Armour for size XL</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_cost_of_Body_Armour_for_size_XS__c</fullName>
        <label>Total cost of  Body Armour for size XS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_cost_of_Body_Armour_for_size_XXL__c</fullName>
        <label>Total cost of  Body Armour for size XXL</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>BA Solution Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Solution Pricing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA Solutions Pricing</pluralLabel>
    <recordTypes>
        <fullName>HAP_Solution_Pricing</fullName>
        <active>true</active>
        <label>HAP Solution Pricing</label>
    </recordTypes>
    <recordTypes>
        <fullName>SAP_Solution_Pricing</fullName>
        <active>true</active>
        <label>SAP Solution Pricing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>